--- a/vignettes/blueprint.Rmd
+++ b/vignettes/blueprint.Rmd
@@ -175,8 +175,7 @@ table(number_leisure_places) |>
   labs(x = "Number of leisure venues attended in a week", y = "Count")
 ```
 
-(ref:leisure-venues) The number of leisure venues that each individual attends in a week.
-The minimum possible number of venues is zero, and maximum possible is seven.
+(ref:leisure-venues) The number of leisure venues that each individual attends in a week. The minimum possible number of venues is zero, and maximum possible is seven.
 
 ## Disease states and the infection process {#disease}
 
@@ -217,13 +216,12 @@ By altering the duration of acquired immunity to infection, the framework has th
 epidemic_plot <- exemplar_data |>
   filter(Setting == "Epidemic" & Intervention == "Baseline") |>
   filter(timestep %in% c(1:300)) |>
-  mutate(Percentage = Proportion * 100) |>
-  ggplot(aes(x = timestep, y = Percentage, colour = State)) +
+  ggplot(aes(x = timestep, y = Proportion, colour = State)) +
   geom_line(linewidth = 1.2) +
   theme_bw() +
   labs(x = "Days", y = "Percentage of Population", colour = "Disease State",
        title = "Epidemic Pathogen Model Simulation") +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100)) +
+  scale_y_continuous(labels = scales::percent, expand = c(0, 0),, limits = c(0, 1)) +
   scale_x_continuous(expand = c(0, 0)) +
   scale_color_discrete(type = blueprint_colours) +
   theme(strip.background = element_blank(),
@@ -233,19 +231,18 @@ epidemic_plot <- exemplar_data |>
         legend.title = element_blank(),
         legend.position = "right",
         legend.background = element_blank(),
-        axis.line = element_line()) 
+        axis.line = element_line())
 
 # Plot the epidemic exemplar simulations:
 endemic_plot <- exemplar_data |>
   filter(Setting == "Endemic" & Intervention == "Baseline") |>
   filter(timestep %in% c(400:11000)) |>
-  mutate(Percentage = Proportion * 100) |>
-  ggplot(aes(x = timestep, y = Percentage, colour = State)) +
+  ggplot(aes(x = timestep, y = Proportion, colour = State)) +
   geom_line(linewidth = 1.2) +
   theme_bw() +
   labs(x = "Days", y = "Percentage of Population", colour = "Disease State",
        title = "Endemic Pathogen Model Simulation") +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100)) +
+  scale_y_continuous(labels = scales::percent, expand = c(0, 0), limits = c(0, 1)) +
   scale_x_continuous(expand = c(0, 0)) +
   scale_color_discrete(type = blueprint_colours) +
   theme(strip.background = element_blank(),
@@ -258,9 +255,12 @@ endemic_plot <- exemplar_data |>
         axis.line = element_line()) 
 
 plot_legend <- cowplot::get_legend(endemic_plot)
-cowplot::plot_grid(epidemic_plot + theme(legend.position = "none"), 
-                   endemic_plot + theme(legend.position = "none"),
-                   plot_legend, nrow = 1, rel_widths = c(1, 1, 0.4))
+
+cowplot::plot_grid(
+  epidemic_plot + theme(legend.position = "none"), 
+  endemic_plot + theme(legend.position = "none"),
+  plot_legend, nrow = 1, rel_widths = c(1, 1, 0.4)
+)
 ```
 
 (ref:epidemic-endemic) Illustration of simulated epidemic and endemic pathogens.
@@ -295,10 +295,10 @@ data.frame(workplace_sizes) |>
     cols = c("Targeted", "Random"),
     names_to = "type",
     values_to = "chosen"
-  )|> 
+  ) |> 
   mutate(
     chosen2 = ifelse(chosen, "Yes", "No")
-  )|>
+  ) |>
   ggplot(aes(x = rank, y = log10(workplace_sizes) + 1, 
              col = chosen2, fill = chosen2)) +
   geom_bar(stat = "identity", alpha = 1, position = position_dodge()) +
@@ -349,12 +349,11 @@ Targeted far UVC provided an even greater reduction in the total number of peopl
 exemplar_data |>
   filter(Setting == "Epidemic") |>
   filter(timestep %in% c(1:1000)) |>
-  mutate(Percentage = Proportion * 100) |>
-  ggplot(aes(x = timestep, y = Percentage, colour = State)) +
+  ggplot(aes(x = timestep, y = Proportion, colour = State)) +
   geom_line(linewidth = 1.2) +
   theme_bw() +
   labs(x = "Days", y = "Percentage of Population", colour = "Disease State") +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100)) +
+  scale_y_continuous(labels = scales::percent, expand = c(0, 0), limits = c(0, 1)) +
   scale_x_continuous(expand = c(0, 0)) +
   scale_color_discrete(type = blueprint_colours) +
   facet_grid(~Intervention) +
@@ -364,7 +363,7 @@ exemplar_data |>
         legend.title = element_blank(),
         legend.position = c(0.93, 0.85),
         legend.background = element_blank(),
-        axis.line = element_line()) 
+        axis.line = element_line())
 ```
 
 (ref:exemplar-epidemic) Illustration of the effect of random and targeted far UVC deployment, relative to an interventionless baseline, on the disease state dynamics of a theoretical pathogen when full and lasting immunity to infection is acquired by infected individuals (i.e. the pathogen induces a single epidemic).
@@ -383,12 +382,11 @@ Again, targeting far UVC deployment provided additional benefits to pathogen sup
 exemplar_data |>
   filter(Setting == "Endemic") |>
   filter(timestep %in% c(400:1000)) |>
-  mutate(Percentage = Proportion * 100) |>
-  ggplot(aes(x = timestep, y = Percentage, colour = State)) +
+  ggplot(aes(x = timestep, y = Proportion, colour = State)) +
   geom_line(linewidth = 1.2) +
   theme_bw() +
   labs(x = "Days", y = "Percentage of Population", colour = "Disease State") +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100)) +
+  scale_y_continuous(labels = scales::percent, expand = c(0, 0), limits = c(0, 1)) +
   scale_x_continuous(expand = c(0, 0), breaks = c(400, 600, 800, 100), labels = c(0, 200, 400, 600)) +
   scale_color_discrete(type = blueprint_colours) +
   facet_grid(~Intervention) +
@@ -419,34 +417,34 @@ For low transmission intensities ($R_0 \leq 1.5$), very high levels of far UVC c
 ```{r sweep-R0-coverage, fig.cap="(ref:sweep-R0-coverage)"}
 coverage_over_time <- parameter_sweep_data |>
   filter(efficacy == 0.8, coverage <= 1) |>
-  ggplot(aes(x = 100 * coverage, y = 100 * final_size, col = factor(R0))) +
+  ggplot(aes(x = coverage, y = final_size, col = factor(R0))) +
   geom_line() +
+  scale_x_continuous(labels = scales::percent, limits = c(0, 1)) +
+  scale_y_continuous(labels = scales::percent, limits = c(0, 1)) +
   facet_grid(. ~ Coverage_Strategy) +
   theme_bw() +
   theme(strip.background = element_rect(fill = "white", colour = "black")) +
-  labs(x = "Coverage %", y = "Epidemic Final Size", colour = "R0")
+  labs(x = "Far UVC Coverage", y = "Epidemic Final Size", colour = "R0")
 
-heatmap_contained <- parameter_sweep_data |>
+coverage_heatmap_contained <- parameter_sweep_data |>
   filter(efficacy == 0.8, coverage <= 1) |>
-  ggplot(aes(y = factor(R0), x = 100 * coverage, fill = 100 * final_size)) +
+  ggplot(aes(y = factor(R0), x = coverage, fill = final_size)) +
   geom_tile(colour = "black") +
-  scale_fill_viridis_c(option = "rocket", limits = c(0, 100), begin = 0,
-                       end = 1, name = "Proportion\nContained", direction = -1) +
-    scale_x_continuous(breaks = c(0, 20, 40, 60, 80, 100),
-                       labels = c(0, 20, 40, 60, 80, 100)) +
-    facet_grid(. ~ Coverage_Strategy) +
-    labs(y = "R0", x = "farUVC Coverage (%)") +
-    theme(axis.text = element_text(angle = 0),
-          plot.title = element_text(hjust = 0.5, size = 20, face = "bold"),
-          legend.title = element_text(size = 12),
-          legend.text = element_text(size = 12),
-          legend.position = "right",
-          strip.background = element_rect(fill = "white", colour = "black"),
-          panel.border = element_rect(linetype = "solid", fill = NA, linewidth = 0.5)) +
-    coord_cartesian(expand = FALSE)
+  scale_fill_viridis_c(
+    option = "rocket", limits = c(0, 1), begin = 0, end = 1,
+    name = "Proportion\nContained", direction = -1, labels = scales::percent
+  ) +
+  scale_x_continuous(breaks = c(0, 0.2, 0.4, 0.6, 0.8, 1), labels = scales::percent) +
+  facet_grid(. ~ Coverage_Strategy) +
+  labs(y = "R0", x = "Far UVC Coverage") +
+  theme(axis.text = element_text(angle = 0),
+        legend.position = "right",
+        strip.background = element_rect(fill = "white", colour = "black"),
+        panel.border = element_rect(linetype = "solid", fill = NA, linewidth = 0.5)) +
+  coord_cartesian(expand = FALSE)
 
 # Align the figures in both directions
-cowplot::plot_grid(coverage_over_time, heatmap_contained, nrow = 2,
+cowplot::plot_grid(coverage_over_time, coverage_heatmap_contained, nrow = 2,
                    align = "hv", axis = "lr", rel_heights = c(1, 2))
 ```
 
@@ -455,36 +453,36 @@ cowplot::plot_grid(coverage_over_time, heatmap_contained, nrow = 2,
 ### Sensitivity analysis of $R_0$ and far UVC efficacy
 
 ```{r sweep-R0-efficacy, fig.cap="(ref:sweep-R0-efficacy)"}
-coverage_over_time <- parameter_sweep_data |>
+efficacy_over_time <- parameter_sweep_data |>
   filter(coverage > 0.7 & coverage < 1) |>
-  ggplot(aes(x = 100 * efficacy, y = 100 * final_size, col = factor(R0))) +
+  ggplot(aes(x = efficacy, y = final_size, col = factor(R0))) +
   geom_line() +
+  scale_x_continuous(labels = scales::percent, limits = c(0, 1)) +
+  scale_y_continuous(labels = scales::percent, limits = c(0, 1)) +
   facet_grid(. ~ Coverage_Strategy) +
   theme_bw() +
-  theme(strip.background = element_rect(fill="white", colour = "black")) +
-  labs(x = "Efficacy %", y = "Epidemic Final Size", colour = "R0")
+  theme(strip.background = element_rect(fill = "white", colour = "black")) +
+  labs(x = "Far UVC Efficacy", y = "Epidemic Final Size", colour = "R0")
 
-heatmap_contained <- parameter_sweep_data |>
+efficacy_heatmap_contained <- parameter_sweep_data |>
   filter(coverage > 0.7 & coverage < 1) |>
-  ggplot(aes(y = factor(R0), x = 100 * efficacy, fill = 100 * final_size)) +
+  ggplot(aes(y = factor(R0), x = efficacy, fill = final_size)) +
   geom_tile(colour = "black") +
-  scale_fill_viridis_c(option = "mako", limits = c(0, 100),begin = 0, end = 1,
-                       name = "Proportion\nContained", direction = -1) +
-    scale_x_continuous(breaks = c(0, 20, 40, 60, 80, 100),
-                       labels = c(0, 20, 40, 60, 80, 100)) +
-    facet_grid(. ~ Coverage_Strategy) +
-    labs(y = "R0", x = "farUVC Efficacy (%)") +
-    theme(axis.text = element_text(angle = 0),
-          plot.title = element_text(hjust = 0.5, size = 20, face = "bold"),
-          legend.title = element_text(size = 12),
-          legend.text = element_text(size = 12),
-          legend.position = "right",
-          strip.background = element_rect(fill = "white", colour = "black"),
-          panel.border = element_rect(linetype = "solid", fill = NA, linewidth = 0.5)) +
-    coord_cartesian(expand = FALSE)
+  scale_fill_viridis_c(
+    option = "mako", limits = c(0, 1),begin = 0, end = 1,
+    name = "Proportion\nContained", direction = -1, labels = scales::percent
+  ) +
+  scale_x_continuous(breaks = c(0, 0.2, 0.4, 0.6, 0.8, 1), labels = scales::percent) +
+  facet_grid(. ~ Coverage_Strategy) +
+  labs(y = "R0", x = "Far UVC Efficacy") +
+  theme(axis.text = element_text(angle = 0),
+        legend.position = "right",
+        strip.background = element_rect(fill = "white", colour = "black"),
+        panel.border = element_rect(linetype = "solid", fill = NA, linewidth = 0.5)) +
+  coord_cartesian(expand = FALSE)
 
 # Align the figures in both directions
-cowplot::plot_grid(coverage_over_time, heatmap_contained, nrow = 2,
+cowplot::plot_grid(efficacy_over_time, efficacy_heatmap_contained, nrow = 2,
                    align = "hv", axis = "lr", rel_heights = c(1, 2))
 ```
 
