parameter sources for estimating riskiness in

--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -126,7 +126,9 @@ $$
 \alpha = \frac{Q}{\nu} + k_D
 $$
 
-is the number of equivalent air changes per hour.
+$\frac{Q}{\nu}$ is sometimes referred to as $A$ or the number of hair changes per hour.
+$\alpha$ is therefore the number of equivalent air changes per hour taking into account both natural decay of the virus and ventilation driven removal of infective virus.
+
 As $t \rightarrow\infty$, we get the steady state solution, which is the following:
 
 $$
@@ -142,7 +144,23 @@ $$
 P_{i}(t) =  1 - e^{-r C_{ss}Bt}
 $$
 
-where $P_i$ is the probability a person becomes infected conditional on them spending time $t$ in a room with $C_{ss}$ concentration of infective virus, $B$ is the volume rate at which air is breathed in, and $r$ is risk parameter, the probability that a single inhaled infective virus will initiate an infection.
+where $P_i$ is the probability a person becomes infected conditional on them spending time $t$ in a room with $C_{ss}$ concentration of infective virus, $B$ is the volume rate at which air is breathed in, and $r$ is the risk parameter, the probability that a single inhaled infective virus will initiate an infection.
+
+#### Estimating Variation in Riskiness Across Different Locations Belonging to the Same Setting Type
+
+| Parameter       | Value Used       | Description                                                                                                                                                                         | Source                                                                                                                                                                                                                                                                                                                                                                                                                               |
+|---------|-----------|------------------------|----------------------------|
+| $\pi$           | $27$             | Rates of (infective) virus emission from infected individuals.                                                                                                                      | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Buonanno et al, 2020](https://www.sciencedirect.com/science/article/pii/S0160412020320675#f0020)                                                                                                                                                                                                                                                  |
+| $A_{school}$    |                  | Range of air-changes per hour considered for schools.                                                                                                                               | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
+| $A_{workplace}$ |                  | Range of air-changes per hour considered for workplaces.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
+| $A_{household}$ |                  | Range of air-changes per hour considered for households.                                                                                                                            | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                                                                                                                                                                                                                                                                                                                  |
+| $A_{leisure}$   |                  | Range of air-changes per hour considered for leisure settings.                                                                                                                      | Assumed to be the same as workplaces.                                                                                                                                                                                                                                                                                                                                                                                                |
+| $k_D$           | 0.64             | Natural decay constant for SARS-CoV-2 in aerosols                                                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [van Doremalen et al, 2020](https://www.nejm.org/doi/full/10.1056/NEJMc2004973)                                                                                                                                                                                                                                                                    |
+| $\nu$           |                  |                                                                                                                                                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| $B$             | $0.45$           | Volume breathing rate i.e. the volume of air breathed in and out per hour. Assumes 15 breaths per minute and 500ml tidal volume to produce 0.45m\^3 volume breathing rate per hour. | [the internet - <https://www.verywellhealth.com/tidal-volume-5090250#>[:\~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female](https://www.verywellhealth.com/tidal-volume-5090250#:~:text=What%20Is%20Tidal%20Volume%3F&text=Tidal%20volume%20(Vt%20or%20TV,mL%20for%20those%20assigned%20female). and <https://my.clevelandclinic.org/health/articles/10881-vital-signs>] |
+| $r$             | $1.37 × 10^{-2}$ | The probability that a single inhaled infective virus will initiate an infection.                                                                                                   | [Blatchley et al, 2024](https://pubs.acs.org/doi/full/10.1021/acs.est.3c03026#) & [Killingley et al, 2022](https://www.nature.com/articles/s41591-022-01780-9)                                                                                                                                                                                                                                                                       |
+
+: Table 1: Parameter Estimates Used to Calculate Variation in Riskiness Across Locations Belonging to the Same Setting Type
 
 # Assessing how various far UVC parameters shape another outcome
 
